manifests/base/resources/resource-library/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "21068"
    prometheus.io/scrape: "true"
  labels:
    app: resource-library
    chart: resource-library-1.10.10
    heritage: Helm
    release: resource-library
  name: resource-library
spec:
  ports:
  - name: resource-library
    port: 21068
    protocol: TCP
    targetPort: 21068
  selector:
    app: resource-library
    release: resource-library
  type: ClusterIP
---
