manifests/base/resources/resource-library/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://resource-library-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/extensions/?(.*) /v1/extensions/$1 break;
      rewrite (?i)/api/(.*) /$1 break;
      more_set_headers "Content-Security-Policy: default-src 'none';";
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
    nginx.org/client-max-body-size: 250m
  labels:
    app: resource-library
    chart: resource-library-1.10.10
    heritage: Helm
    release: resource-library
  name: resource-library
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: resource-library
          servicePort: 21068
        path: /extensions
      - backend:
          serviceName: resource-library
          servicePort: 21068
        path: /api/v1/extensions
      - backend:
          serviceName: resource-library
          servicePort: 21068
        path: /api/v1/themes
---
